# sdlconfig

./: CMakeLists.txt  README.md  sdltest.c
